fix petitions show on mobile

--- a/app/assets/stylesheets/test.css.scss
+++ b/app/assets/stylesheets/test.css.scss
@@ -31,8 +31,9 @@ body.bootstrap {
   #content {
     margin: -40px auto 65px;
   }
-  .petition .header {
+  .petition .header  hr {
     border-bottom: 1px dotted #ccc;
+    display: block;
   }
   border-top: 40px solid black;
   .navigation {
